--- a/lamp.html
+++ b/lamp.html
@@ -18,9 +18,9 @@ html5shiv.js"></script>
 respond.min.js"></script>
 <![endj0if]-->
 
-<!--<script type="text/javascript" src="/webiopi.js"></script>-->
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="update-lamp.js"></script>
+<!--<script type="text/javascript" src="webiopi.js"></script>-->
 <script type="text/javascript">
 	$(document).ready(function(){
 		//update ui
@@ -170,10 +170,11 @@ respond.min.js"></script>
 			//coba(j0);
 			update(j0,j1,j2,j3,j4,j5,j6,j7,jf0,jf1,jf2,jf3,jf4,jf5,jf6,jf7,m0,m1,m2,m3,m4,m5,m6,m7,mf0,mf1,mf2,mf3,mf4,mf5,mf6,mf7,a0,a1,a2,a3,a4,a5,a6,a7);
 			//alert(a0);
+			//webiopi().callMacro("update", []);
 		});
 		
 		$("#cancel").click(function(){
-			window.location.href="http://localhost/home.html";
+			window.location.href="http://192.168.1.16:8000/home.html";
 //			alert('okay');
 		});
 	});
@@ -193,12 +194,13 @@ respond.min.js"></script>
 		<nav class="navbar navbar-inverse" role="navigation">
 			<div>
 				<ul class="nav navbar-nav">
-					<li><a href="home.html">Home</a></li>
+					<li><a href="http://192.168.1.16:8000/htdocs/home.html">Home</a></li>
 					<li class="active"><a href="lamp.html">Lamp</a></li>
-					<li><a href="temperature.html">Temperature</a></li>
+					<li><a href="http://192.168.1.16:8000/htdocs/temperature.html">Temperature</a></li>
 					<li><a href="security.html">Security</a></li>
 					<li><a href="music.html">Music</a></li>
-					<li><a href="setting.html">Setting</a></li>
+
+<!--					<li><a href="setting.html">Setting</a></li> -->
 				</ul>
 			</div>
 		</nav>
@@ -208,6 +210,9 @@ respond.min.js"></script>
 	<!--CONTENT-->
 	<div class="container" name="content">
 		<div class="content">
+			
+			<h3><strong>Lamp Setting</strong></h3><br>
+			
 					<div class="row" id="header-lamp">
 						<div class="col-xs-3 col-md-3 col-lg-3"><h4 class="text-center"><strong>Ruang</strong></h4></div>
 						<div class="col-xs-2 col-md-2 col-lg-2"><h4 class="text-center"><strong>Auto</strong></h4></div>
@@ -220,7 +225,7 @@ respond.min.js"></script>
 					<!-- ----------LAMPU 0---------- -->
 					<div class="row" id="lamp0">
 						<div class="col-xs-3 col-md-3 col-lg-3">
-							<h4 class="text-center"><a color="#aae41e">Ruang Tamu</a></h4>
+							<h4 class="text-center">Kamar Tidur 1</h4>
 						</div>
 						<div class="col-xs-2 col-md-2 col-lg-2" name="auto0" align="center">
 							<input type="checkbox" name="autobox0" id="auto0" >
@@ -277,7 +282,7 @@ respond.min.js"></script>
 					<!-- ----------LAMPU 1---------- -->
 					<div class="row" id="lamp1">
 						<div class="col-xs-3 col-md-3 col-lg-3">
-							<h4 class="text-center">Kamar Utama</h4>
+							<h4 class="text-center">Kamar Tidur 2</h4>
 						</div>
 						<div class="col-xs-2 col-md-2 col-lg-2" name="auto1" align="center">
 							<input type="checkbox" name="autobox1" id="auto1" >
@@ -333,7 +338,7 @@ respond.min.js"></script>
 					<!-- ----------LAMPU 2---------- -->
 					<div class="row" id="lamp2">
 						<div class="col-xs-3 col-md-3 col-lg-3">
-							<h4 class="text-center">Kamar Utama</h4>
+							<h4 class="text-center">Kamar Mandi</h4>
 						</div>
 						<div class="col-xs-2 col-md-2 col-lg-2" name="auto2" align="center">
 							<input type="checkbox" name="autobox2" id="auto2">
@@ -389,7 +394,7 @@ respond.min.js"></script>
 					<!-- ----------LAMPU 3---------- -->
 					<div class="row" id="lamp3">
 						<div class="col-xs-3 col-md-3 col-lg-3">
-							<h4 class="text-center">Kamar Anak</h4>
+							<h4 class="text-center">Garasi</h4>
 						</div>
 						<div class="col-xs-2 col-md-2 col-lg-2" name="auto3" align="center">
 							<input type="checkbox" name="autobox3" id="auto3" >
@@ -445,7 +450,7 @@ respond.min.js"></script>
 					<!-- ----------LAMPU 4---------- -->
 					<div class="row" id="lamp4">
 						<div class="col-xs-3 col-md-3 col-lg-3">
-							<h4 class="text-center">Ruang Keluarga</h4>
+							<h4 class="text-center">Ruang Makan</h4>
 						</div>
 						<div class="col-xs-2 col-md-2 col-lg-2" name="auto4" align="center">
 							<input type="checkbox" name="autobox4" id="auto4" >
@@ -502,7 +507,7 @@ respond.min.js"></script>
 					<!-- ----------LAMPU 5---------- -->
 					<div class="row" id="lamp5">
 						<div class="col-xs-3 col-md-3 col-lg-3">
-							<h4 class="text-center">Dapur</h4>
+							<h4 class="text-center">Ruang Tamu</h4>
 						</div>
 						<div class="col-xs-2 col-md-2 col-lg-2" name="auto5" align="center">
 							<input type="checkbox" name="autobox5" id="auto5" >
@@ -559,7 +564,7 @@ respond.min.js"></script>
 					<!-- ----------LAMPU 6---------- -->
 					<div class="row" id="lamp6">
 						<div class="col-xs-3 col-md-3 col-lg-3">
-							<h4 class="text-center">Garasi</h4>
+							<h4 class="text-center">Ruang Keluarga</h4>
 						</div>
 
 						<div class="col-xs-2 col-md-2 col-lg-2" name="auto6" align="center">
@@ -617,7 +622,7 @@ respond.min.js"></script>
 					<!-- ----------LAMPU 7---------- -->
 					<div class="row" id="lamp7">
 						<div class="col-xs-3 col-md-3 col-lg-3">
-							<h4 class="text-center">Taman Depan</h4>
+							<h4 class="text-center">Lampu Taman</h4>
 						</div>
 
 						<div class="col-xs-2 col-md-2 col-lg-2" name="auto7" align="center">
